	* Cleaned up makefiles.
2025-05-24 Fred Gleason <fredg@paravelsystems.com>
	* Completed rough port to Qt4.
2025-05-24 Fred Gleason <fredg@paravelsystems.com>
	* Completed rough port to Qt6.
2025-05-26 Fred Gleason <fredg@paravelsystems.com>
	* Modifed davit(1) to create home directory configuration
	automatically at startup.
	* Added a 'DvtSqlQuery' class in 'lib/'.
2025-05-29 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Login' dialog in davit(1).
2025-05-29 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the user management dialogs in davit(1) to use a model.
2025-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'List Affiliates' and 'Edit Affiliate' dialogs in
	davit(1).
2025-06-02 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Contacts' dialog in davit(1).
2025-06-03 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the 'Program List for <affiliate>' dialog in davit(1).
	* Refactored the 'Affiliate History' dialog in davit(1).
2025-06-03 Fred Gleason <fredg@paravelsystems.com>
	* Reenabled the ability to add and delete contacts in the 'Contacts'
	dialog in davit(1).
2025-06-11 Fred Gleason <fredg@paravelsystems.com>
	* Reenabled the ability to add and delete program airings in the
	'Program List' dialog in davit(1).
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression that caused toggling of the 'Show/Hide Program
	List' and 'Show/Hide Affiliate History' buttons on the 'Edit
	Affiliate' dialog to fail in davit(1).
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in davit(1) that caused the 'Pgm Dir' column to be
	hidden in the 'Show Contacts' dialog.
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Fixed various issues in davit(1) with showing/hiding modeless
	dialogs in the 'Edit Affiliate' dialog.
2025-06-26 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'List Affiliates' dialog in davit(1) to set the
	'Show Affiliates Only' checkbox to be ticked by default.